2007-11-26  John Franks <jrfranks@zmanda.com>
	* common-src/debug.c	For cygwin builds: change to
	  close and reopen log file handle on successful rename.
	  This is to ensure that Windows has no possibility of
	  preventing access to the original file name if processes
	  collide.
		
2007-11-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amflush.c: Send config option (-o) to child process.

2007-11-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Don't set est(dp)->state before testing it.

2007-11-23  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/readline.m4: Include termcap, curses or ncurese in LIBS.

2007-11-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c (match_disklist): Fix for disk not found.

2007-11-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Don't release taper_ev_read in
                               start_degraded_mode.

2007-11-20  Paddy Sreenivasan <paddy@zmanda.com>
        * amanda.spec: Added calls to Zmanda
	* example/amanda-client.conf.in: Switch to bsdtcp

2007-11-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Handle taper FAILED message.

2007-11-14  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/userid.m4: Use $enableval in AC_ARG_ENABLE.

2007-11-07  Paddy Sreenivasan <paddy@zmanda.com>
	* server-src/amserverconfig.pl server-src/amaddclient.pl: 
          new configuration tools
	* common-src/amgpgcrypt.pl common-src/amcryptsimple.pl: 
          new encryption plugins
	* man/xml-source/amaddclient.8.xml man/xml-source/amgpgcrypt.8.xml 
          man/xml-source/amcryptsimple.8.xml 
	  man/xml-source/amserverconfig.8.xml: man pages for new tools
	* example/template.d/* - Configuration file templates
	* example/amanda-client.conf.in: Updated amanda configuration file
	* example/Makefile.am man/Makefile.am server-src/Makefile.am
          common-src/Makefile.am: Added amserverconfig, amaddclient, 