@@ -1,3 +1,7 @@
+2007-11-26  Ian Turner <ian@zmanda.com>
+	* server-src/Makefile.am: Move amdevcheck from libexec/ to sbin/.
+	  Thanks to Satya Ganga <gsat@zmanda.com> for noticing this problem.
+	
 2007-11-26  John Franks <jrfranks@zmanda.com>
 	* common-src/debug.c	For cygwin builds: change to
 	  close and reopen log file handle on successful rename.
